# TDE_SO-II

./: CMakeLists.txt  README.md  TDE_Simulador_Arquivos.cpp  TDE_v1.cpp  TDE_v2.cpp  TDE_v3.cpp  TDE_v4.cpp
output/: TDE_Simulador_Arquivos  TDE_v1  TDE_v2  TDE_v3  TDE_v4
